--- a/api-csharp/samples/server/Sample/Sample.csproj
+++ b/api-csharp/samples/server/Sample/Sample.csproj
@@ -9,6 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
-    <PackageReference Include="Trinsic.Api" Version="2.0.1" />
+    <PackageReference Include="Trinsic.Api" Version="2.1.0-alpha1" />
   </ItemGroup>
 </Project>
