--- a/api-ruby/samples/server/Gemfile
+++ b/api-ruby/samples/server/Gemfile
@@ -4,7 +4,7 @@ gem 'dotenv', groups: [:development, :test]
 gem 'httparty'        # HTTP requests
 gem 'sinatra', '~> 4.1.1'
 gem 'sinatra-contrib' # For JSON support, etc.
-gem 'trinsic_api'     # Trinsic API client
+gem 'trinsic_api', '~> 2.1.0-alpha1'     # Trinsic API client
 gem 'rack', '~> 3.1.12' # Force a compatible version of Rack
 
 group :test do
