--- a/api-java/samples/server/pom.xml
+++ b/api-java/samples/server/pom.xml
@@ -61,11 +61,11 @@
             <version>2.0.12</version>
         </dependency>
 
-        <!-- https://jitpack.io/#trinsic-id/sdk-java-api/2.0.0 -->
+        <!-- https://jitpack.io/#trinsic-id/sdk-java-api/2.1.0-alpha1 -->
         <dependency>
             <groupId>com.github.trinsic-id</groupId>
             <artifactId>sdk-java-api</artifactId>
-            <version>2.0.0</version>
+            <version>2.1.0-alpha2</version>
         </dependency>
 
         <dependency>
