--- a/ui-web/samples/package.json
+++ b/ui-web/samples/package.json
@@ -14,7 +14,7 @@
     "vite": "5.4.1"
   },
   "dependencies": {
-    "@trinsic/web-ui": "2.1.2",
+    "@trinsic/web-ui": "2.3.0-alpha1",
     "micromodal": "^0.4.10",
     "qrcode": "^1.5.4"
   },
