--- a/api-csharp/samples/server/Sample/Sample.csproj
+++ b/api-csharp/samples/server/Sample/Sample.csproj
@@ -1,14 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
-    <PackageReference Include="Trinsic.Api" Version="2.2.0-alpha1" />
+    <PackageReference Include="Trinsic.Api" Version="2.2.0" />
   </ItemGroup>
 </Project>
