--- a/api-java/samples/server/pom.xml
+++ b/api-java/samples/server/pom.xml
@@ -55,11 +55,11 @@
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.12</version>
     </dependency>
-    <!-- https://jitpack.io/#trinsic-id/sdk-java-api/2.2.0-alpha1 -->
+    <!-- https://jitpack.io/#trinsic-id/sdk-java-api/2.2.0 -->
     <dependency>
       <groupId>com.github.trinsic-id</groupId>
       <artifactId>sdk-java-api</artifactId>
-      <version>2.2.0-alpha1</version>
+      <version>2.2.0</version>
     </dependency>
     <dependency>
       <groupId>io.github.cdimascio</groupId>
