--- a/api-typescript/samples/server/package.json
+++ b/api-typescript/samples/server/package.json
@@ -19,7 +19,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "@trinsic/api": "2.2.0-alpha1",
+    "@trinsic/api": "2.2.0",
     "dotenv": "^16.5.0",
     "express": "4.21.2",
     "express-async-errors": "3.1.1"
